--- a/run.org
+++ b/run.org
@@ -173,135 +173,8 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 
 
 * Trochoidal cutting
-** Trochoidal-circle-external-array-610
-  
-#+NAME: trochoidal-circle-array-610-data
-#+HEADER: :tangle yes :noweb yes
-#+HEADER: :results output 
-#+HEADER: :comments both :cache yes :session step
-#+BEGIN_SRC lisp  
-(setq output-stream *STANDARD-OUTPUT*)
-(setq l-step 20.0d0)
-(setq zi 0.0)
-(setq f- 900)
-(setq center-array (list '(0.0 0.0) '(100 0.0) '(100.0 100.0) '(100.0 0.0)))
-(setq center '(0.0 0.0))
-(setq tool-diameter 50d0)
-(setq internal-radius (/ 100.0 2.0d0))
-(setq trochoidal-width 40)
-(setq external-radius (+ internal-radius trochoidal-width))
-(setq z-list-in '(50.0 18.0 16.0 15.0 12.0 8.0 5.0 0.0 0.0))
-#+END_SRC
-
-#+RESULTS[4c92bf8419c841ab74c60eaf4f85ed0616867e47]: trochoidal-circle-array-610-data
-
-
-#+NAME: trochoidal-circle-array-610-print
-#+HEADER: :tangle yes :noweb yes
-#+HEADER: :results output raw 
-#+HEADER: :comments both :cache yes :session step
-#+BEGIN_SRC lisp  
-(format t "|l-step|~f| | mm|~%" l-step)
-(format t "|zi |~f|  |mm|~%" zi)
-(format t "|f- |~f| | mm/min|~%" f-)
-(format t "|----|~%")
-(loop for center in center-array
-      do (format t "|center:|~f|~f |mm x mm|~%" (car center) (cadr center)))
-(format t "|----|~%")
-(format t "|tool-diameter |~f| | mm|~%" tool-diameter)
-(format t "|trochoidal-width|~f|| mm| ~%" trochoidal-width)
-(format t "|internal-radius|~f| | mm |~%" internal-radius)
-(format t "|external-radius|~f| | mm|~%" external-radius)
-(format t "|----|~%")
-(format t "|internal-cutting-radius|~f| | mm |~%" (- internal-radius (/ tool-diameter 2.0)))
-(format t "|external-cutting-radius|~f| | mm|~%" (+ external-radius (/ tool-diameter 2.0)))
-(format t "|internal-cutting-daimeter|~f| | mm |~%" (* 2.0 (- internal-radius (/ tool-diameter 2.0))))
-(format t "|external-cutting-diameter|~f| | mm|~%" (* 2.0(+ external-radius (/ tool-diameter 2.0))))
-(format t "|----|~%")
-#+END_SRC
-
-#+RESULTS[3372bd16d8c879731f6cb246e2c4494f0d81e22b]: trochoidal-circle-array-610-print
-| l-step                    |  20.0 |       | mm      |
-| zi                        |   0.0 |       | mm      |
-| f-                        | 900.0 |       | mm/min  |
-|---------------------------+-------+-------+---------|
-| center:                   |   0.0 |   0.0 | mm x mm |
-| center:                   | 100.0 |   0.0 | mm x mm |
-| center:                   | 100.0 | 100.0 | mm x mm |
-| center:                   | 100.0 |   0.0 | mm x mm |
-|---------------------------+-------+-------+---------|
-| tool-diameter             |  50.0 |       | mm      |
-| trochoidal-width          |  40.0 |       | mm      |
-| internal-radius           |  50.0 |       | mm      |
-| external-radius           |  90.0 |       | mm      |
-|---------------------------+-------+-------+---------|
-| internal-cutting-radius   |  25.0 |       | mm      |
-| external-cutting-radius   | 115.0 |       | mm      |
-| internal-cutting-daimeter |  50.0 |       | mm      |
-| external-cutting-diameter | 230.0 |       | mm      |
-|---------------------------+-------+-------+---------|
-
-#+NAME: trochoidal-circle-array-610-gcode
-#+HEADER: :tangle yes :noweb yes
-#+HEADER: :results output  file :file trochoidal-circle-610-diameter-internal.ngc
-#+HEADER: :comments both :cache yes :session step
-#+BEGIN_SRC lisp
-<<trochoidal-circle-array-610-data>>
-(external-trochoidal-circle-array l-step zi f- center-array tool-diameter internal-radius trochoidal-width z-list-in output-stream)
-#+END_SRC
-
-#+RESULTS[92a743ac2ed8481f50672b63413ca201b10983a5]: trochoidal-circle-array-610-gcode
-[[file:trochoidal-circle-610-diameter-internal.ngc]]
-
-** Trochoidal-circle-internal-500
-
-#+NAME: test-trochoidal-internal-circle-500
-#+BEGIN_SRC lisp :tangle yes :results output file :file trochoidal-circle-500-diameter-internal.ng :comments both :cache yes
-  (setq output-stream *STANDARD-OUTPUT*)
-  (setq l-step 2.0d0)
-  (setq zi 0.0)
-  (setq f- 900)
-  (setq center '(0.0 0.0))
-
-  (setq internal-radius (/ 496 2.0d0))
-  (setq tool-diameter 3.175)
-  (setq trochoidal-width 4.5)
-  (setq z-list-in '(50.0 18.0 16.0 15.0 12.0 8.0 5.0 0.0 0.0))
-
-  (internal-trochoidal-circle l-step zi f- center tool-diameter internal-radius trochoidal-width z-list-in output-stream)
-
-#+END_SRC
-
-#+RESULTS[222ecd476c0e42a1f06bb25d357716aaa2ad6720]: test-trochoidal-internal-circle-500
-[[file:trochoidal-circle-500-diameter-internal.ng]]
-
-** Trochoidal-circle-internal-496
-
-#+NAME: test-trochoidal-internal-circle-496
-#+BEGIN_SRC lisp :tangle yes :results output file :file trochoidal-circle-496-diameter-internal.ngc :comments both :cache yes :session step
-  (setq output-stream *STANDARD-OUTPUT*)
-  (setq l-step 2.0d0)
-  (setq zi 0.0)
-  (setq f- 900)
-  (setq center '(0.0 0.0))
-
-  (setq internal-radius (/ 495 2.0d0))
-  (setq tool-diameter 3.175)
-  (setq trochoidal-width 4.5)
-  (setq z-list-in '(50.0 18.0 16.0 15.0 12.0 8.0 5.0 0.0 0.0))
-
-  (internal-trochoidal-circle l-step zi f- center tool-diameter internal-radius trochoidal-width z-list-in output-stream)
-
-#+END_SRC
-
-#+RESULTS[4a9abd43523f61620b0f54d74445fb50a0c7d751]: test-trochoidal-internal-circle-496
-[[file:trochoidal-circle-496-diameter-internal.ng]]
-
-
-** Trochoidal-circle-by-diameters
-
 *** Trochoidal-circle-by-diameters-D-type
-#+NAME: D-type trochoidal 
+#+NAME: D-type-trochoidal 
 #+BEGIN_SRC lisp :tangle yes 
   (setq output-stream (open "/home/me/lispcnc/test-D.ngc" :direction :output :if-does-not-exist :create :if-exists :supersede))
   (setq xystep 3.00d0)
@@ -314,21 +187,16 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
   (setq center '(0.0 0.0))
   (setq tool-diameter 3.175)
   (setq internal-diameter 580.0)
-    (setq external-diameter 596.0)
+  (setq external-diameter 596.0)
 
-  ;  (prologue 8000 output-stream)
+  (trochoidal-data-gcode-prologue
+   xystep zstep zsafe zstart zend fz fxy center tool-diameter internal-diameter external-diameter output-stream)
 
+  (external-D-trochoidal-circle
+   xystep zstep zsafe zstart zend fz fxy center tool-diameter internal-diameter external-diameter output-stream 1.0d0)
+  (epilogue output-stream) 
 
-
-
-    (trochoidal-data-gcode-prologue
-     xystep zstep zsafe zstart zend fz fxy center tool-diameter internal-diameter external-diameter output-stream)
-
-    (external-D-trochoidal-circle
-     xystep zstep zsafe zstart zend fz fxy center tool-diameter internal-diameter external-diameter output-stream 1.0d0)
-    (epilogue output-stream) 
-
-    (close output-stream)
+  (close output-stream)
 
 #+END_SRC
 
@@ -350,34 +218,22 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
   (setq internal-diameter 560.0)
   (setq external-diameter 596.0)
 
-  ;  (prologue 8000 output-stream)
+  (trochoidal-data-gcode-prologue
+   xystep zstep zsafe zstart zend fz fxy center tool-diameter internal-diameter external-diameter output-stream)
 
+  (external-trochoidal-circle
+   xystep zstep zsafe zstart zend fz fxy center tool-diameter internal-diameter external-diameter output-stream)
+  (epilogue output-stream) 
 
-
-
-    (trochoidal-data-gcode-prologue
-     xystep zstep zsafe zstart zend fz fxy center tool-diameter internal-diameter external-diameter output-stream)
-
-    (external-trochoidal-circle
-     xystep zstep zsafe zstart zend fz fxy center tool-diameter internal-diameter external-diameter output-stream)
-    (epilogue output-stream) 
-
-    (close output-stream)
+  (close output-stream)
 
 #+END_SRC
 
-#+RESULTS: trochoidal circle
-: T
 
-
-
-
-#+RESULTS: t
-: T
-
-#+NAME: line
+*** Trochoidal line
+#+NAME: trochoidal_line
 #+BEGIN_SRC lisp :tangle yes 
-(setq output-stream (open "/home/me/t.ngc" :direction :output :if-does-not-exist :create :if-exists :supersede))
+(setq output-stream (open "/home/me/lispcnc/line.ngc" :direction :output :if-does-not-exist :create :if-exists :supersede))
 (setq xystep 3.00d0)
 (setq zstep 4.0)
 (setq zsafe 50.0)
@@ -396,11 +252,8 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 (epilogue output-stream) 
 
 (close output-stream)
-
 #+END_SRC
 
-#+RESULTS: line
-: T
 
 
 
